fixed IE footer alignment issue

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -828,6 +828,7 @@ margin on the iframe, cause it breaks stuff. */
 }
 .clearfix:after { clear: both; }
 .clearfix { zoom: 1; }
+p.clearfix { height: 1px; }
 
 /* Hides shit */
 .hidden {
